unpackaged/main/default/objects/ServiceAppointment/fields/ETI_Accepted__c.field-meta.xml
<CustomField>
    <fullName>ETI_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Appointment Accepted, This checkbox is True</description>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>