unpackaged/main/default/objects/ServiceAppointment/fields/ETI_Booking__c.field-meta.xml
<CustomField>
    <fullName>ETI_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>ETI_Booking__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>