unpackaged/main/default/objects/ServiceAppointment/fields/ETI_Inspection_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>ETI_Inspection_Date_and_Time__c</fullName>
    <description>This is to be used in Service Report Template</description>
    <formula>SchedStartTime</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Date and Time</label>
    <type>DateTime</type>
</CustomField>