unpackaged/main/default/objects/ServiceAppointment/fields/ETI_Inspection_Status__c.field-meta.xml
<CustomField>
    <fullName>ETI_Inspection_Status__c</fullName>
    <description>This will be updated every Time from Work order</description>
    <label>Inspection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>