unpackaged/main/default/objects/ServiceAppointment/fields/ETI_isScheduleMailSent__c.field-meta.xml
<CustomField>
    <fullName>ETI_isScheduleMailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is True when scheduled appointment details sent in mail and used to stop triggering multiple mails to Customer.</description>
    <label>isScheduleMailSent</label>
    <type>Checkbox</type>
</CustomField>