unpackaged/main/default/objects/ServiceAppointment/fields/ETI_send_reschedule_Mail__c.field-meta.xml
<CustomField>
    <fullName>ETI_send_reschedule_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this is checked through apex class through quick action in Dispatcher console. once this checkbox is checked , this Triggers Process builder that sends an Email Alert.</description>
    <label>send Reschedule Mail</label>
    <type>Checkbox</type>
</CustomField>