unpackaged/main/default/objects/ServiceAppointment/fields/ETI_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETI_Total_Amount__c</fullName>
    <description>Total Amount Charged from Customer for Inspection</description>
    <formula>ETI_Booking__r.Total_Amount__c</formula>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>