unpackaged/main/default/objects/ServiceAppointment/fields/ETI_Wfr_5_mins_delay__c.field-meta.xml
<CustomField>
    <fullName>ETI_Wfr_5_mins_delay__c</fullName>
    <description>Calculates Time before 58 mins, This will be used to fire Process builder with 2 mins Delay.</description>
    <formula>Now() -58*(1/24/60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wfr_5_mins_delay</label>
    <type>DateTime</type>
</CustomField>