unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Contact__c.field-meta.xml
<CustomField>
    <fullName>ETT_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>