unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>ETT_Delivery_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>