unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>ETT_Delivery_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Note</label>
    <referenceTo>ETT_Delivery_Note__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>