unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Fax__c.field-meta.xml
<CustomField>
    <fullName>ETT_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>