unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Inspection_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Inspection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection Card</label>
    <referenceTo>ETT_Inspection_Card__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>