unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Inspector_name__c.field-meta.xml
<CustomField>
    <fullName>ETT_Inspector_name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please provide a valid Inspector</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>ETT_Technician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>