unpackaged/main/default/objects/ServiceAppointment/fields/ETT_No_of_Tyres__c.field-meta.xml
<CustomField>
    <fullName>ETT_No_of_Tyres__c</fullName>
    <formula>ETT_Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Tyres</label>
    <type>Text</type>
</CustomField>