unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ETT_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>