unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ETT_Postal_Code__c</fullName>
    <formula>ETT_Opportunity__r.Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>