unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETT_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for Cancellation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>