unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Reference__c.field-meta.xml
<CustomField>
    <fullName>ETT_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>