unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>ETT_Sales_Rep__c</fullName>
    <formula>ETT_Opportunity__r.CreatedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep</label>
    <type>Text</type>
</CustomField>