unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Special_Instruction__c.field-meta.xml
<CustomField>
    <fullName>ETT_Special_Instruction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Instruction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>