unpackaged/main/default/objects/ServiceAppointment/fields/ETT_Tyre_Inspector__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Inspector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>