unpackaged/main/default/objects/ServiceAppointment/recordTypes/ETI_nspection_Service_Appointment_Completed.recordType-meta.xml
<RecordType>
    <fullName>ETI_nspection_Service_Appointment_Completed</fullName>
    <active>true</active>
    <description>Record type once appointment status is completed .</description>
    <label>Inspection Service Appointment - Completed</label>
</RecordType>