unpackaged/main/default/objects/ServiceAppointment/recordTypes/ETT_Tyre_Internal.recordType-meta.xml
<RecordType>
    <fullName>ETT_Tyre_Internal</fullName>
    <active>true</active>
    <description>ET Tyre Service Appointment for Tyre - Internal</description>
    <label>Tyre - Internal</label>
</RecordType>