unpackaged/main/default/objects/ServiceAppointment/recordTypes/Inspection_Service_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Inspection_Service_Appointment</fullName>
    <active>true</active>
    <label>Inspection Service Appointment</label>
</RecordType>