unpackaged/main/default/objects/ServiceAppointment/recordTypes/Tyre_Cash_Individual.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Cash_Individual</fullName>
    <active>true</active>
    <label>Tyre - Cash Individual</label>
</RecordType>