unpackaged/main/default/objects/ServiceAppointment/recordTypes/Tyre_Cash_Supplier.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Cash_Supplier</fullName>
    <active>true</active>
    <description>ET Tyre Service Appointment for Cash Supplier</description>
    <label>Tyre - Cash Supplier</label>
</RecordType>