unpackaged/main/default/objects/ServiceAppointment/recordTypes/Tyre_Credit_B2B_Supplier.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Credit_B2B_Supplier</fullName>
    <active>true</active>
    <description>ET Tyre Service Appointment for B2B Supplier</description>
    <label>Tyre - Credit/B2B Supplier</label>
</RecordType>