unpackaged/main/default/objects/ServiceAppointment/recordTypes/Tyre_InternalPrivate.recordType-meta.xml
<RecordType>
    <fullName>Tyre_InternalPrivate</fullName>
    <active>true</active>
    <description>ET Tyre Service Appointment for Tyre - Internal Private</description>
    <label>Tyre - Internal Private</label>
</RecordType>