unpackaged/main/default/objects/ServiceAppointment/recordTypes/Tyre_Refurbishing_Services.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Refurbishing_Services</fullName>
    <active>true</active>
    <description>ET Tyre Service Appointment for Cash Customer</description>
    <label>Tyre - Refurbishing Services</label>
</RecordType>