unpackaged/main/default/objects/ServiceAppointment/recordTypes/Tyre_Return_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Tyre_Return_Appointment</fullName>
    <active>true</active>
    <label>Tyre - Return Appointment</label>
</RecordType>