unpackaged/main/default/objects/ServiceAppointment/validationRules/Cannot_Complete_once_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Complete_once_Rejected</fullName>
    <active>true</active>
    <description>Request Cannot be completed, once Rejected.</description>
    <errorConditionFormula>RecordType.DeveloperName =&#39;Inspection_Service_Appointment&#39; &amp;&amp;  ETI_Rejected__c = true &amp;&amp; ( text(ETI_Inspection_Status__c) = &#39;Pass&#39; || text(ETI_Inspection_Status__c) = &#39;Fail&#39; )</errorConditionFormula>
    <errorMessage>Cannot do any actions on Rejected Appointment</errorMessage>
</ValidationRule>