unpackaged/main/default/objects/ServiceAppointment/validationRules/Cannot_Complete_Without_Accepting.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Complete_Without_Accepting</fullName>
    <active>true</active>
    <description>Request Cannot be completed, Without Accepting</description>
    <errorConditionFormula>RecordType.DeveloperName =&#39;Inspection_Service_Appointment&#39; &amp;&amp;   ETI_Accepted__c = false &amp;&amp; ( text(ETI_Inspection_Status__c) = &#39;Pass&#39; || text(ETI_Inspection_Status__c) = &#39;Fail&#39; )</errorConditionFormula>
    <errorMessage>Cannot Complete Inspection, Without Accepting the Appointment.</errorMessage>
</ValidationRule>