unpackaged/main/default/objects/ServiceAppointment/validationRules/Cannot_Reject_once_Accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Reject_once_Accepted</fullName>
    <active>true</active>
    <description>Accepted Request Cannot be Rejected.</description>
    <errorConditionFormula>RecordType.DeveloperName =&#39;Inspection_Service_Appointment&#39; &amp;&amp;   ETI_Accepted__c = true &amp;&amp;  ISCHANGED( ETI_Rejected__c ) &amp;&amp; ETI_Rejected__c = true</errorConditionFormula>
    <errorMessage>Appointment once Accepted, Cannot be Rejected</errorMessage>
</ValidationRule>