unpackaged/main/default/objects/ServiceAppointment/validationRules/ETT_Cancellation_Reason_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Cancellation_Reason_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status, &#39;Canceled&#39;),
ISBLANK(ETT_Reason__c),
OR(
$RecordType.Name = &quot;Tyre - Cash Supplier&quot;,
$RecordType.Name = &quot;Tyre - Credit/B2B Supplier&quot;,
$RecordType.Name = &quot;Tyre - Refurbishing Services&quot;,
$RecordType.Name = &quot;Tyre - Return Appointment&quot;
))</errorConditionFormula>
    <errorMessage>Please enter the cancellation reason.</errorMessage>
</ValidationRule>