unpackaged/main/default/objects/ServiceAppointment/validationRules/Start_Inspection_on_same_day.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Inspection_on_same_day</fullName>
    <active>true</active>
    <description>Inspection can be accepted on Scheduled start date of inspection</description>
    <errorConditionFormula>RecordType.DeveloperName =&#39;Inspection_Service_Appointment&#39; &amp;&amp; ETI_Accepted__c = true &amp;&amp; TODAY() &lt;&gt; DATEVALUE(SchedStartTime)</errorConditionFormula>
    <errorMessage>Inspection can be accepted on the same day of Inspection. Please Try on the Inspection Date.</errorMessage>
</ValidationRule>