unpackaged/main/default/objects/ServiceAppointment/validationRules/Validate_Appointment_Completion.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Appointment_Completion</fullName>
    <active>false</active>
    <description>Inspection must be completed before - Completing the Appointment</description>
    <errorConditionFormula>RecordType.DeveloperName =&#39;Inspection_Service_Appointment&#39; &amp;&amp;  text(Status ) = &#39;Completed&#39; &amp;&amp; text( ETI_Inspection_Status__c )=&#39;None&#39;</errorConditionFormula>
    <errorMessage>Please Complete the Inspection and Complete Appointment</errorMessage>
</ValidationRule>