unpackaged/main/default/objects/ServiceAppointment/listViews/ETI_Inspection_Service_Appointments_All.listView-meta.xml
<ListView>
    <fullName>ETI_Inspection_Service_Appointments_All</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>ServiceTerritory</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>ServiceAppointment.Inspection_Service_Appointment,ServiceAppointment.ETI_nspection_Service_Appointment_Completed</value>
    </filters>
    <label>Inspection Service Appointments -All</label>
    <sharedTo>
        <group>ETI_Inspection_FSL_Admins</group>
    </sharedTo>
</ListView>