unpackaged/main/default/objects/ServiceAppointment/listViews/ETI_Inspection_Service_Appointments_Cancel.listView-meta.xml
<ListView>
    <fullName>ETI_Inspection_Service_Appointments_Cancel</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>ServiceTerritory</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>ServiceAppointment.Inspection_Service_Appointment</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <label>Inspection Service Appointments - Cancel</label>
    <sharedTo>
        <group>ETI_Inspection_FSL_Admins</group>
    </sharedTo>
</ListView>