unpackaged/main/default/objects/ServiceAppointment/listViews/ETI_Inspection_Service_Appointments_Closed.listView-meta.xml
<ListView>
    <fullName>ETI_Inspection_Service_Appointments_Closed</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>ServiceTerritory</columns>
    <columns>ETI_Inspection_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>ServiceAppointment.ETI_nspection_Service_Appointment_Completed</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Inspection Service Appointments - Closed</label>
    <sharedTo>
        <group>ETI_Inspection_FSL_Admins</group>
    </sharedTo>
</ListView>