unpackaged/main/default/objects/ServiceAppointment/listViews/Today_Appointment_s.listView-meta.xml
<ListView>
    <fullName>Today_Appointment_s</fullName>
    <columns>Name</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ArrivalWindowEndTime</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Appointment&#39;s</label>
</ListView>