unpackaged/main/default/objects/ServiceAppointment/listViews/Tyre_Cash_Supplier.listView-meta.xml
<ListView>
    <fullName>Tyre_Cash_Supplier</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>LatestEndTime</columns>
    <columns>EarliestStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>SchedStartTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>ServiceAppointment.Tyre_Cash_Supplier</value>
    </filters>
    <label>Tyre - Cash Supplier</label>
</ListView>